# video_for_science

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
configs/: default.yaml  humanTFM.yaml  i2v_native.yaml  stage1_adapters.yaml  stage2_temporal.yaml
scripts/: __init__.py  download_data.py  evaluate.py  generate.py  pretrain_adapter.py  run_humanTFM_training.sh  train.py  train_humanTFM.py
src/: __init__.py
src/data/: __init__.py  dataset.py  transforms.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/models/: __init__.py  channel_adapter.py  humantfm_model.py  physics_adapter.py  wan_wrapper.py
src/training/: __init__.py  distributed.py  humantfm_trainer.py  optimizer.py  trainer.py
