[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wan22-well-finetuning"
version = "0.1.0"
description = "Fine-tuning Wan2.2-I2V on The Well physics dataset"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "numpy>=1.24.0",
    "einops>=0.7.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "safetensors>=0.4.0",
    "peft>=0.10.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.8.0",
    "pillow>=10.0.0",
    "omegaconf>=2.3.0",
    "imageio>=2.34.0",
    "huggingface-hub>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
logging = [
    "wandb>=0.16.0",
    "tensorboard>=2.16.0",
]

[project.scripts]
wan22-train = "scripts.train:main"
wan22-evaluate = "scripts.evaluate:main"
wan22-generate = "scripts.generate:main"
wan22-download = "scripts.download_data:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*", "configs*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
